@@ -8,8 +8,6 @@
 
 package ch.ethz.seb.sebserver.gbl.api;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import ch.ethz.seb.sebserver.gbl.model.sebconfig.ConfigurationNode;
@@ -34,7 +32,7 @@ public final class API {
 
         public final EntityType entityType;
 
-        private BatchActionType(final EntityType entityType) {
+        BatchActionType(final EntityType entityType) {
             this.entityType = entityType;
         }
     }
@@ -72,8 +70,7 @@ public final class API {
 
     public static final String GRANT_TYPE_PASSWORD = "password";
     public static final String GRANT_TYPE_CLIENT = "client_credentials";
-    public static final List<String> RW_SCOPES = Collections.unmodifiableList(
-            Arrays.asList("read", "write"));
+    public static final List<String> RW_SCOPES = List.of("read", "write");
 
     public static final String CURRENT_USER_PATH_SEGMENT = "/me";
     public static final String CURRENT_USER_ENDPOINT = API.USER_ACCOUNT_ENDPOINT + CURRENT_USER_PATH_SEGMENT;
